--- a/mypollsite/polls/templates/polls/index.html
+++ b/mypollsite/polls/templates/polls/index.html
@@ -1,6 +1,6 @@
-{% if questions %}
+{% if latest_question_list %}
     <ul>
-    {% for question in questions %}
+    {% for question in latest_question_list %}
     <li><a href="{% url 'polls:detail' question.id %}">{{ question.question_text }}</a></li>
     {% endfor %}
     </ul>
